Перевел на MapStruct всё что можно